p2debuglog.txt
 gcc -g p2original.c
p2original.c: In function ‘add’:
p2original.c:14:1: error: expected ‘;’ before ‘}’ token
 }
 ^
p2original.c: In function ‘output’:
p2original.c:17:37: error: ‘sum’ undeclared (first use in this function)
   printf("sum of %d + %d is %d",a,b,sum);
                                     ^~~
p2original.c:17:37: note: each undeclared identifier is reported only once for each function it appears in
p2original.c: In function ‘main’:
p2original.c:25:3: error: too many arguments to function ‘output’
   output(a,b,sum);
   ^~~~~~
p2original.c:15:5: note: declared here
 int output(int a,int b)
     ^~~~~~
 gcc -g p2original.c
 gdb a.out
GNU gdb (Ubuntu 8.1.1-0ubuntu1) 8.1.1
Copyright (C) 2018 Free Software Foundation, Inc.
License GPLv3+: GNU GPL version 3 or later <http://gnu.org/licenses/gpl.html>
This is free software: you are free to change and redistribute it.
There is NO WARRANTY, to the extent permitted by law.  Type "show copying"
and "show warranty" for details.
This GDB was configured as "x86_64-linux-gnu".
Type "show configuration" for configuration details.
For bug reporting instructions, please see:
<http://www.gnu.org/software/gdb/bugs/>.
Find the GDB manual and other documentation resources online at:
<http://www.gnu.org/software/gdb/documentation/>.
For help, type "help".
Type "apropos word" to search for commands related to "word"...
Reading symbols from a.out...done.
(gdb) b main
Breakpoint 1 at 0x810: file p2original.c, line 22.
(gdb) r
Starting program: /home/runner/pps-test1-naga4121-1/a.out 
warning: Error disabling address space randomization: Operation not permitted

Breakpoint 1, main () at p2original.c:22
22    a=input();
(gdb) n
enter value :
4
23    b=input();
(gdb) n
enter value :
12
24    sum=add(a,b);
(gdb) n
25    output(a,b,sum);
(gdb) n
26    return 0;
(gdb) n
27  }(gdb) c
Continuing.
sum of 4 + 12 is 16[Inferior 1 (process 383) exited normally]
(gdb) 